# opencv-course

./: .gitignore  CMakeLists.txt
2dfilter/: CMakeLists.txt  main.cpp
brightness/: CMakeLists.txt
brightness/src/: main.cpp
histogram/: CMakeLists.txt
histogram/src/: main.cpp
surface-fit/: .gitignore  CMakeLists.txt  runAll.sh  runList.sh
surface-fit/src/: main.cpp
test-cmake/: CMakeLists.txt
test-cmake/src/: main.cpp
